--- a/BackPortal/Views/Base.lproj/Patients.storyboard
+++ b/BackPortal/Views/Base.lproj/Patients.storyboard
@@ -39,7 +39,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="meJ-oo-LPF">
-                                <rect key="frame" x="0.0" y="64" width="702.5" height="704"/>
+                                <rect key="frame" x="0.0" y="64" width="703" height="704"/>
                                 <connections>
                                     <segue destination="0eu-cO-tCq" kind="embed" id="W3Z-Mq-a6H"/>
                                 </connections>
@@ -190,7 +190,7 @@
             <objects>
                 <collectionViewController id="0eu-cO-tCq" customClass="ActiviesViewController" customModule="BackPortal" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="4XY-SU-o9U">
-                        <rect key="frame" x="0.0" y="0.0" width="702.5" height="704"/>
+                        <rect key="frame" x="0.0" y="0.0" width="703" height="704"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="qhC-4l-en9">
@@ -254,6 +254,56 @@
                                     <outlet property="nameLabel" destination="ypA-Kp-I7c" id="dNp-4w-HKN"/>
                                     <outlet property="subLabel" destination="6y7-EJ-zGK" id="epz-g5-F8F"/>
                                 </connections>
+                            </collectionViewCell>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AssessmentCell" id="PMu-li-Vx0">
+                                <rect key="frame" x="251.5" y="0.0" width="200" height="100"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zkN-Ug-4oz" userLabel="Content View">
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="WHf-S2-gQ8">
+                                                    <rect key="frame" x="20" y="15.5" width="160" height="24"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="u3u-V1-hfc">
+                                                    <rect key="frame" x="20" y="37.5" width="160" height="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="0Ju-mg-Hms">
+                                                    <rect key="frame" x="20" y="56" width="172" height="36"/>
+                                                </stackView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="0Ju-mg-Hms" secondAttribute="bottom" constant="8" id="KTU-3R-WXo"/>
+                                                <constraint firstItem="WHf-S2-gQ8" firstAttribute="centerY" secondItem="zkN-Ug-4oz" secondAttribute="centerY" multiplier="55/100" id="R3b-Lo-mGb"/>
+                                                <constraint firstItem="WHf-S2-gQ8" firstAttribute="leading" secondItem="zkN-Ug-4oz" secondAttribute="leading" constant="20" symbolic="YES" id="bPA-P9-T6I"/>
+                                                <constraint firstItem="0Ju-mg-Hms" firstAttribute="leading" secondItem="u3u-V1-hfc" secondAttribute="leading" id="fBW-3j-mcK"/>
+                                                <constraint firstItem="u3u-V1-hfc" firstAttribute="leading" secondItem="WHf-S2-gQ8" secondAttribute="leading" id="g2i-w4-He5"/>
+                                                <constraint firstAttribute="trailing" secondItem="WHf-S2-gQ8" secondAttribute="trailing" constant="20" symbolic="YES" id="gM5-QY-Qw3"/>
+                                                <constraint firstItem="u3u-V1-hfc" firstAttribute="trailing" secondItem="WHf-S2-gQ8" secondAttribute="trailing" id="jcU-9C-Cph"/>
+                                                <constraint firstAttribute="trailing" secondItem="0Ju-mg-Hms" secondAttribute="trailing" constant="8" id="pIi-yR-9L1"/>
+                                                <constraint firstItem="0Ju-mg-Hms" firstAttribute="top" secondItem="u3u-V1-hfc" secondAttribute="bottom" constant="2" id="xiF-87-8WN"/>
+                                                <constraint firstItem="u3u-V1-hfc" firstAttribute="top" secondItem="WHf-S2-gQ8" secondAttribute="bottom" constant="-2" id="zfa-o4-gdK"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="zkN-Ug-4oz" firstAttribute="leading" secondItem="PMu-li-Vx0" secondAttribute="leading" id="94v-HZ-bsd"/>
+                                    <constraint firstItem="zkN-Ug-4oz" firstAttribute="top" secondItem="PMu-li-Vx0" secondAttribute="top" id="Y6t-5C-wLY"/>
+                                    <constraint firstAttribute="bottom" secondItem="zkN-Ug-4oz" secondAttribute="bottom" id="igp-fD-AGu"/>
+                                    <constraint firstAttribute="trailing" secondItem="zkN-Ug-4oz" secondAttribute="trailing" id="kbR-0X-TYD"/>
+                                </constraints>
+                                <size key="customSize" width="200" height="100"/>
                             </collectionViewCell>
                         </cells>
                         <connections>
