--- a/BackPortal/Views/Base.lproj/Patients.storyboard
+++ b/BackPortal/Views/Base.lproj/Patients.storyboard
@@ -189,7 +189,7 @@
         <scene sceneID="UPg-2c-7Uc">
             <objects>
                 <collectionViewController id="0eu-cO-tCq" customClass="ActiviesViewController" customModule="BackPortal" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="4XY-SU-o9U">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="4XY-SU-o9U">
                         <rect key="frame" x="0.0" y="0.0" width="703" height="704"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -210,7 +210,7 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6dP-Ky-jCT" userLabel="Content View">
                                             <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ypA-Kp-I7c">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intervention" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ypA-Kp-I7c">
                                                     <rect key="frame" x="20" y="15.5" width="160" height="24"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                     <nil key="textColor"/>
@@ -265,14 +265,14 @@
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zkN-Ug-4oz" userLabel="Content View">
                                             <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="WHf-S2-gQ8">
-                                                    <rect key="frame" x="20" y="25.5" width="160" height="24"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Assessment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="WHf-S2-gQ8">
+                                                    <rect key="frame" x="20" y="25.5" width="113" height="24"/>
                                                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Text" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="u3u-V1-hfc">
-                                                    <rect key="frame" x="20" y="47.5" width="160" height="17"/>
+                                                    <rect key="frame" x="20" y="47.5" width="113" height="17"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -280,19 +280,36 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="0Ju-mg-Hms">
                                                     <rect key="frame" x="20" y="66" width="172" height="26"/>
                                                 </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="A4Y-cY-BAl">
+                                                    <rect key="frame" x="150.5" y="20" width="29.5" height="33.5"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="28"/>
+                                                    <color key="textColor" red="0.090196078430000007" green="0.72156862749999995" blue="0.72549019609999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="units" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000004" translatesAutoresizingMaskIntoConstraints="NO" id="lFa-MB-zm7">
+                                                    <rect key="frame" x="152.5" y="49.5" width="27.5" height="14.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
+                                                <constraint firstItem="lFa-MB-zm7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="u3u-V1-hfc" secondAttribute="trailing" constant="8" symbolic="YES" id="2GI-hL-mBF"/>
+                                                <constraint firstItem="A4Y-cY-BAl" firstAttribute="bottom" secondItem="WHf-S2-gQ8" secondAttribute="bottom" constant="4" id="8wc-e5-A7X"/>
+                                                <constraint firstItem="lFa-MB-zm7" firstAttribute="top" secondItem="A4Y-cY-BAl" secondAttribute="bottom" constant="-4" id="Fie-Dk-oOa"/>
                                                 <constraint firstAttribute="bottom" secondItem="0Ju-mg-Hms" secondAttribute="bottom" constant="8" id="KTU-3R-WXo"/>
                                                 <constraint firstItem="WHf-S2-gQ8" firstAttribute="centerY" secondItem="zkN-Ug-4oz" secondAttribute="centerY" multiplier="75/100" id="R3b-Lo-mGb"/>
+                                                <constraint firstItem="lFa-MB-zm7" firstAttribute="trailing" secondItem="A4Y-cY-BAl" secondAttribute="trailing" id="a1j-h3-xSk"/>
                                                 <constraint firstItem="WHf-S2-gQ8" firstAttribute="leading" secondItem="zkN-Ug-4oz" secondAttribute="leading" constant="20" symbolic="YES" id="bPA-P9-T6I"/>
                                                 <constraint firstItem="0Ju-mg-Hms" firstAttribute="leading" secondItem="u3u-V1-hfc" secondAttribute="leading" id="fBW-3j-mcK"/>
                                                 <constraint firstItem="u3u-V1-hfc" firstAttribute="leading" secondItem="WHf-S2-gQ8" secondAttribute="leading" id="g2i-w4-He5"/>
-                                                <constraint firstAttribute="trailing" secondItem="WHf-S2-gQ8" secondAttribute="trailing" constant="20" symbolic="YES" id="gM5-QY-Qw3"/>
                                                 <constraint firstItem="u3u-V1-hfc" firstAttribute="trailing" secondItem="WHf-S2-gQ8" secondAttribute="trailing" id="jcU-9C-Cph"/>
                                                 <constraint firstAttribute="trailing" secondItem="0Ju-mg-Hms" secondAttribute="trailing" constant="8" id="pIi-yR-9L1"/>
+                                                <constraint firstAttribute="trailing" secondItem="A4Y-cY-BAl" secondAttribute="trailing" constant="20" symbolic="YES" id="prg-HX-NEk"/>
                                                 <constraint firstItem="0Ju-mg-Hms" firstAttribute="top" secondItem="u3u-V1-hfc" secondAttribute="bottom" constant="2" id="xiF-87-8WN"/>
                                                 <constraint firstItem="u3u-V1-hfc" firstAttribute="top" secondItem="WHf-S2-gQ8" secondAttribute="bottom" constant="-2" id="zfa-o4-gdK"/>
+                                                <constraint firstItem="A4Y-cY-BAl" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="WHf-S2-gQ8" secondAttribute="trailing" constant="8" symbolic="YES" id="zlb-Cf-x6g"/>
                                             </constraints>
                                         </view>
                                     </subviews>
@@ -307,6 +324,8 @@
                                 <connections>
                                     <outlet property="nameLabel" destination="WHf-S2-gQ8" id="kvp-2R-EZN"/>
                                     <outlet property="subLabel" destination="u3u-V1-hfc" id="CKD-I6-v0i"/>
+                                    <outlet property="unitLabel" destination="lFa-MB-zm7" id="lfc-aF-Gbw"/>
+                                    <outlet property="valueLabel" destination="A4Y-cY-BAl" id="eg2-cZ-8rV"/>
                                 </connections>
                             </collectionViewCell>
                         </cells>
